--- a/frontend/product/product.css
+++ b/frontend/product/product.css
@@ -82,11 +82,16 @@ header input:focus {
 }
 
 .search-icon {
+    color: #4F4F4F;
     font-size: .8rem;
     position: absolute;
     top: 55%;
     transform: translateY(-50%);
     left: .5rem;    
+}
+
+::placeholder {
+    color: #4F4F4F;
 }
 
 .mob_search-bar input {
