--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   outline-style: none;
+  text-decoration: none;
 }
 
 /* Variables */
@@ -23,68 +24,85 @@
   --grip-gap-both: 10px;
 }
 
+a {
+  color: var(--secondary-color2);
+}
+
 /* Inputs */
 input,
 .input {
   padding: var(--input-padding);
   border: var(--input-border-default);
   border-radius: var(--input-border-radius);
+  width: 100%;
   cursor: pointer;
 }
 .input-primary {
-    border: var(--input-boundary) var(--primary-color);
+  border: var(--input-boundary) var(--primary-color);
 }
 .input-secondary1 {
-    border: var(--input-boundary) var(--secondary-color1);
+  border: var(--input-boundary) var(--secondary-color1);
 }
 .input-secondary2 {
-    border: var(--input-boundary) var(--secondary-color2);
+  border: var(--input-boundary) var(--secondary-color2);
 }
 .input-secondary3 {
-    border: var(--input-boundary) var(--secondary-color3);
+  border: var(--input-boundary) var(--secondary-color3);
 }
 
 /* Buttons */
-button, .button {
-    padding: var(--input-padding);
-    border-radius: var(--input-border-radius);
-    background-color: none;
-    color: #eee;
-    border: none;
-    cursor: pointer;
+button,
+.button {
+  padding: var(--input-padding);
+  border-radius: var(--input-border-radius);
+  background-color: none;
+  color: #eee;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  font-weight: bold;
+  font-size: 1.1em;
 }
 .button-primary {
-    background-color: var(--primary-color);
-    transition: all 1s;
+  background-color: var(--primary-color);
+  transition: all 1s;
 }
 .button-primary:hover {
-    background-color: var(--primary-color-hover);
+  background-color: var(--primary-color-hover);
 }
 .button-secondary1 {
-    background-color: var(--secondary-color1);
+  background-color: var(--secondary-color1);
 }
 .button-secondary2 {
-    background-color: var(--secondary-color2);
+  background-color: var(--secondary-color2);
 }
 .button-secondary3 {
-    background-color: var(--secondary-color3);
+  background-color: var(--secondary-color3);
 }
 
 /* Grids */
 .grid {
-    display: grid;
-    gap: var(--grip-gap-default);
+  display: grid;
+  gap: var(--grip-gap-default);
 }
 
 .even-2 {
-    grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 .even-4 {
-    grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 .even-6 {
-    grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
 }
 .even-8 {
-    grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(8, 1fr);
+}
+
+.link {
+  color: var(--secondary-color2);
+}
+
+.color-secondary2 {
+  color: var(--secondary-color2);
 }
