--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   outline-style: none;
   text-decoration: none;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Variables */
