change primary color

--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -15,8 +15,8 @@ body {
 
 /* Variables */
 :root {
-  --primary-color: #003e53;
-  --primary-color-hover: #054c6b;
+  --primary-color: #005E7D;
+  --primary-color-hover: #054c6b; 
   --secondary-color1: #9b5de5;
   --secondary-color2: #00bbf9;
   --secondary-color3: #fca311;
