--- a/frontend/login/login.css
+++ b/frontend/login/login.css
@@ -12,10 +12,15 @@ body{
     background-color: #fff;
     padding: 1.2rem;
 }
+
+.lp-login-illustration {
+    padding: 30px;
+}
 .lp-body{
     padding: 0 2em;
     background-color: white;
     width: 25em;
+    border-radius: var(--input-border-radius);
     border-radius: 5px;
     padding-bottom: 0;
     height: 65vh;
@@ -102,6 +107,13 @@ body{
 }
 .lp-password svg.show {
     display: initial;
+}
+.lp-password a{
+    text-align: right !important;
+    width: 100%;
+    display: block;
+    color: #000;
+    padding: 5px 0;
 }
 .lp-body-footer {
     text-align: center;
